base/production/excalidash-backend/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: excalidash-backend-web
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`draw.api.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: excalidash-backend
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: excalidash-backend-websecure
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`draw.api.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: excalidash-backend
          port: 80
  tls:
    secretName: production-excalidash-backend-tls
